; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gatt/extr_gatt_auth.c_gatt_enc_cmpl_cback.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gatt/extr_gatt_auth.c_gatt_enc_cmpl_cback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_7__ = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"gatt_enc_cmpl_cback\00", align 1
@GATT_SEC_ENC_PENDING = common dso_local global i64 0, align 8
@BTM_SUCCESS = common dso_local global i64 0, align 8
@GATT_SEC_ENCRYPT_MITM = common dso_local global i64 0, align 8
@BTM_SEC_FLAG_LKEY_AUTHED = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [39 x i8] c"Unknown operation encryption completed\00", align 1
@.str.2 = private unnamed_addr constant [33 x i8] c"enc callback for unknown bd_addr\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gatt_enc_cmpl_cback(i32 %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_6__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_7__*, align 8
  %13 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %14 = load i32, i32* @FALSE, align 4
  store i32 %14, i32* %11, align 4
  %15 = load i8*, i8** %7, align 8
  %16 = call i32 @UNUSED(i8* %15)
  %17 = call i32 @GATT_TRACE_DEBUG(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call %struct.TYPE_6__* @gatt_find_tcb_by_addr(i32 %18, i32 %19)
  store %struct.TYPE_6__* %20, %struct.TYPE_6__** %9, align 8
  %21 = icmp ne %struct.TYPE_6__* %20, null
  br i1 %21, label %22, label %101

22:                                               ; preds = %4
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %24 = call i64 @gatt_get_sec_act(%struct.TYPE_6__* %23)
  %25 = load i64, i64* @GATT_SEC_ENC_PENDING, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %22
  br label %103

28:                                               ; preds = %22
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i64 @fixed_queue_dequeue(i32 %31, i32 0)
  %33 = inttoptr i64 %32 to %struct.TYPE_7__*
  store %struct.TYPE_7__* %33, %struct.TYPE_7__** %12, align 8
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %35 = icmp ne %struct.TYPE_7__* %34, null
  br i1 %35, label %36, label %98

36:                                               ; preds = %28
  %37 = load i64, i64* %8, align 8
  %38 = load i64, i64* @BTM_SUCCESS, align 8
  %39 = icmp eq i64 %37, %38
  br i1 %39, label %40, label %59

40:                                               ; preds = %36
  %41 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %42 = call i64 @gatt_get_sec_act(%struct.TYPE_6__* %41)
  %43 = load i64, i64* @GATT_SEC_ENCRYPT_MITM, align 8
  %44 = icmp eq i64 %42, %43
  br i1 %44, label %45, label %56

45:                                               ; preds = %40
  %46 = load i32, i32* %5, align 4
  %47 = load i32, i32* %6, align 4
  %48 = call i32 @BTM_GetSecurityFlagsByTransport(i32 %46, i32* %10, i32 %47)
  %49 = load i32, i32* %10, align 4
  %50 = load i32, i32* @BTM_SEC_FLAG_LKEY_AUTHED, align 4
  %51 = and i32 %49, %50
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %53, label %55

53:                                               ; preds = %45
  %54 = load i32, i32* @TRUE, align 4
  store i32 %54, i32* %11, align 4
  br label %55

55:                                               ; preds = %53, %45
  br label %58

56:                                               ; preds = %40
  %57 = load i32, i32* @TRUE, align 4
  store i32 %57, i32* %11, align 4
  br label %58

58:                                               ; preds = %56, %55
  br label %59

59:                                               ; preds = %58, %36
  %60 = load i32, i32* %11, align 4
  %61 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %62 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 4
  %64 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %65 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %64, i32 0, i32 1
  %66 = load i32, i32* %65, align 4
  %67 = call i32 @gatt_sec_check_complete(i32 %60, i32 %63, i32 %66)
  %68 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %69 = call i32 @osi_free(%struct.TYPE_7__* %68)
  %70 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %71 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %70, i32 0, i32 0
  %72 = load i32, i32* %71, align 4
  %73 = call i64 @fixed_queue_length(i32 %72)
  store i64 %73, i64* %13, align 8
  br label %74

74:                                               ; preds = %94, %59
  %75 = load i64, i64* %13, align 8
  %76 = icmp ugt i64 %75, 0
  br i1 %76, label %77, label %97

77:                                               ; preds = %74
  %78 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %79 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %78, i32 0, i32 0
  %80 = load i32, i32* %79, align 4
  %81 = call i64 @fixed_queue_dequeue(i32 %80, i32 0)
  %82 = inttoptr i64 %81 to %struct.TYPE_7__*
  store %struct.TYPE_7__* %82, %struct.TYPE_7__** %12, align 8
  %83 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %84 = icmp ne %struct.TYPE_7__* %83, null
  br i1 %84, label %85, label %92

85:                                               ; preds = %77
  %86 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %87 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %86, i32 0, i32 0
  %88 = load i32, i32* %87, align 4
  %89 = call i32 @gatt_security_check_start(i32 %88)
  %90 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %91 = call i32 @osi_free(%struct.TYPE_7__* %90)
  br label %93

92:                                               ; preds = %77
  br label %97

93:                                               ; preds = %85
  br label %94

94:                                               ; preds = %93
  %95 = load i64, i64* %13, align 8
  %96 = add i64 %95, -1
  store i64 %96, i64* %13, align 8
  br label %74

97:                                               ; preds = %92, %74
  br label %100

98:                                               ; preds = %28
  %99 = call i32 @GATT_TRACE_ERROR(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0))
  br label %100

100:                                              ; preds = %98, %97
  br label %103

101:                                              ; preds = %4
  %102 = call i32 @GATT_TRACE_ERROR(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0))
  br label %103

103:                                              ; preds = %27, %101, %100
  ret void
}

declare dso_local i32 @UNUSED(i8*) #1

declare dso_local i32 @GATT_TRACE_DEBUG(i8*) #1

declare dso_local %struct.TYPE_6__* @gatt_find_tcb_by_addr(i32, i32) #1

declare dso_local i64 @gatt_get_sec_act(%struct.TYPE_6__*) #1

declare dso_local i64 @fixed_queue_dequeue(i32, i32) #1

declare dso_local i32 @BTM_GetSecurityFlagsByTransport(i32, i32*, i32) #1

declare dso_local i32 @gatt_sec_check_complete(i32, i32, i32) #1

declare dso_local i32 @osi_free(%struct.TYPE_7__*) #1

declare dso_local i64 @fixed_queue_length(i32) #1

declare dso_local i32 @gatt_security_check_start(i32) #1

declare dso_local i32 @GATT_TRACE_ERROR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
